# supervisor-multi-agent-system

./: .env.defaults  .gitignore  Dockerfile  LICENSE  README.md  check_db.py  cli.py  db_cleanup_verification.py  docker-compose.yml  force_reingest.py  pyproject.toml  quick_db_check.py  requirements.txt  run_ingestion.py  setup.py  show_db_contents.py  test_better_queries.py  test_db.py  test_db_comprehensive.py  test_enhanced_agents.py  test_queries.sh  test_system.sh
scripts/: initialize_chromadb.py
src/: main.py
src/api/v1/endpoints/: agent.py  status.py
src/databases/: config.py
src/databases/document/: config.py
src/databases/graph/: config.py
src/databases/vector/: config.py
src/domain/agents/: coder.py  graph.py  graph_writer.py  relationship_analyst.py  research_coordinator.py  retrieval.py  supervisor.py  theme_analyst.py  topic_model.py
src/domain/formatters/: clean_response_formatter.py  response_config.py  response_formatter.py
src/domain/prompts/: agent_prompts.py
src/services/: document_service.py  graph_service.py  vector_service.py
src/utils/: agent_wrapper.py  ingestion_pipeline.py  model_init.py
